--- a/backend/package.json
+++ b/backend/package.json
@@ -30,7 +30,8 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "pwtg": "^0.0.2"
   },
   "prettier": {
     "tabWidth": 2,
