--- a/backend/package.json
+++ b/backend/package.json
@@ -29,9 +29,11 @@
   },
   "dependencies": {
     "@types/express": "^4.17.21",
+    "@types/uuid": "^9.0.8",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "pwtg": "^0.0.2"
+    "pwtg": "^0.0.2",
+    "uuid": "^9.0.1"
   },
   "prettier": {
     "tabWidth": 2,
