--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,10 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "rimraf ./dist && tsc && vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "rimraf": "^5.0.5",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
