--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.10",
+    "@types/node": "^20.12.8",
     "rimraf": "^5.0.5",
     "sass": "^1.76.0",
     "typescript": "^5.2.2",
