--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "@types/uuid": "^9.0.8",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "http-proxy-middleware": "^3.0.0",
     "pwtg": "^0.0.2",
     "uuid": "^9.0.1"
   },
