--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.3"
+    "@types/downloadjs": "^1.4.6",
+    "bootstrap": "^5.3.3",
+    "downloadjs": "^1.4.7"
   }
 }
