--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,9 @@
     "express": "^4.19.2",
     "express-rate-limit": "^7.2.0",
     "http-proxy-middleware": "^3.0.0",
+    "pino": "^9.0.0",
+    "pino-http": "^9.0.0",
+    "pino-pretty": "^11.0.0",
     "pwtg": "^0.0.2",
     "uuid": "^9.0.1"
   },
