--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,9 @@
     "mocha": "^10.4.0",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
-    "tsx": "^4.8.2"
+    "rimraf": "^5.0.5",
+    "tsx": "^4.8.2",
+    "typescript": "^5.4.5"
   },
   "dependencies": {
     "@types/express": "^4.17.21",
@@ -38,9 +40,7 @@
     "pino-pretty": "^11.0.0",
     "pwtg": "^0.2.0",
     "uuid": "^9.0.1",
-    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.2/xlsx-0.20.2.tgz",
-    "rimraf": "^5.0.5",
-    "typescript": "^5.4.5"
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.2/xlsx-0.20.2.tgz"
   },
   "prettier": {
     "tabWidth": 2,
