dev: some minor changes and updates

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "test": "npx playwright test",
     "dev": "vite",
     "build": "rimraf ./dist && tsc && vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@playwright/test": "^1.45.1",
+    "@playwright/test": "^1.45.3",
     "@types/bootstrap": "^5.2.10",
     "@types/node": "^20.12.8",
     "rimraf": "^5.0.5",
