--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,9 +22,15 @@ jobs:
 
       - name: start backend server
         run: cd backend && npm run dev && cd ..
+        env:
+          PORT: 4000
+          PICT_LOC: ./binaries/pict
+          LOG_FILE_PATH: server.log
 
       - name: start frontend app
         run: cd frontend && npm run build && npm run preview
+        env:
+          VITE_SERVER_BASE_URL: http://localhost:4000
 
       - name: install pw deps and browsers
         run: npx playwright install --with-deps
