--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,7 +25,7 @@ jobs:
         run: cd frontend && npm ci && npx playwright install --with-deps
 
       - name: run tests
-        run: ls -la && npx playwright test
+        run: cd frontend && npx playwright test
         env:
           PORT: 4000
           PICT_LOC: ./binaries/pict
